--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -14,8 +14,56 @@
     background-color: rgba(86, 177, 189, 0.45) ;
     text-align: center;
   }
-  
+  .cadastro{
+    border: none;
+    background-color: rgba(86, 177, 189, 0.45) ;
+    color: black;
+    width: 160px;
+    height: 36px;
+    font-size: 24px;
+  }
+  .login{
+    border: none;
+    background-color: rgba(86, 177, 189, 0.45) ;
+    color: black;
+    width: 160px;
+    height: 36px;
+    font-size: 24px;
+  }
+  .formulario{
+    border: none;
+    width: 500px;
+    height: 50px;
+    border-radius: 38px;
+    font-size: 18px;
+    text-align: center;
+    margin: 10px 0px 10px 0px;
+  }
+  .botoes{
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    
 
+  }
+  .entrar{
+    background-color: black;
+    color: white;
+    width: 198px;
+    height: 42px;
+    
+
+  }
+  .limpar{
+    background-color: white;
+    text-decoration-color: black;
+    width: 198px;
+    height: 42px;
+
+  }
+  button:hover{
+    background-color: hsl(137, 100%, 81%);
+  }
   .anuncio{
     background-color: white;
     font-weight: bold;
@@ -25,17 +73,7 @@
     color: red;
     font-weight: bold;
 }
-#name{
-  
-    border: none;
-    width: 500px;
-    height: 50px;
-    border-radius: 38px;
-    font-size: 18px;
-    text-align: center;
-    margin: 10px 0px 10px 0px;
-  
-}
+
  
 
  
