ARQUIVOS EM EJS E LINKADOS COM OS PARTIALS

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-       
+      <%-include('./partials/header.ejs') %>
       </header>
 
   <section> 
@@ -63,7 +63,8 @@
 
 
    <footer>
-    
+    <%- include('./partials/footer.ejs') %>
   </footer>
 </body>
+<%- include('./partials/js.ejs') %>
 </html>
