--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-
+    <%-include('./partials/header.ejs') %>
   </header>
 
   <section>
@@ -94,8 +94,8 @@
 
 
     <footer>
-
+      <%- include('./partials/footer.ejs') %>
     </footer>
 </body>
-
+<%- include('./partials/js.ejs') %>
 </html>
