--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-       
+      <%-include('./partials/header.ejs') %>
       </header>
 
   <section> 
@@ -54,7 +54,8 @@
 
 
    <footer>
-   
+    <%- include('./partials/footer.ejs') %>
   </footer>
 </body>
+<%- include('./partials/js.ejs') %>
 </html>
