--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PetHelp</title>
-  <link rel="stylesheet" href="public/stylesheets/contato.css">
+  <link rel="stylesheet" href="../public/stylesheets/contato.css">
 </head>
 <body>
     <header>
@@ -45,7 +45,7 @@
             <p class="primeira">Primeira consulta grátis!</p>
           </div>
 
-            <div class="botoes">
+            <div class="botoes2">
               <button type="button" class="fazerCadastro">Fazer cadastro</button>
               <button type="button" class="contatoPromocao">Contato</button>
             </div>
