--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+
 <footer class="footer">
     <div class="footer-text">
         <div class="footer-icon">
@@ -9,10 +10,10 @@
             Seu intuito é apenas o de <br> fornecer orientações a seus usuários."</p>
     </div>
     <nav>
-        <ul Class="footer-contact">
-            <li><a href="TrabalheConosco.html">Trabalhe Conosco</a></li><br>
-            <li><a href="Contato.html">Contato</a></li><br>
-            <li><a href="Termosdeuso.html">Termos de uso</a></li>
+        <ul class="footer-contact">
+            <li><a href="trabalheConosco.html">Trabalhe Conosco</a></li><br>
+            <li><a href="contato.html">Contato</a></li><br>
+            <li><a href="termosdeuso.html">Termos de uso</a></li>
         </ul>
         <ul class="midias">
             <li><a href="#"><img src="/images/facelogo.png" width="42px;"> <i class="facelogo"></i> </a> </li>
@@ -21,4 +22,5 @@
             <li><a href="#"><img src="/images/Instalogo.png" width="42px;"> <i class="instalogo"></i> </a> </li>
         </ul>
     </nav>
+
 </footer>
