--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -83,6 +83,22 @@ body {
   height: auto;
 }
 
+.imagem-margem-3 {
+  margin: 15px 60px 15px 10px;
+  max-width:400px;
+  max-height:290px;
+  width: auto;
+  height: auto;
+}
+
+.imagem-margem-4 {
+  margin: 15px 10px 15px 60px;
+  max-width:400px;
+  max-height:290px;
+  width: auto;
+  height: auto;
+}
+
 .centralizar-texto {
   text-align: center;
   font-size: xx-large;
@@ -158,6 +174,11 @@ body {
   font-weight: bold;
 }
 
+.main-product {
+  padding: 60px 0;
+  display: flex;
+}
+
 .outer-wrapper {
   display: flex;
   justify-content: space-around;
@@ -173,11 +194,26 @@ body {
   justify-content: space-between;
 }
 
+.inner-wrapper button {
+  cursor: pointer;
+  border: 0;
+  background-color: var(--background-color);
+  font-size: 2.5rem;
+  width: 433px;
+  height: 83px;
+  color: white;
+}
+
 .inner-wrapper h3 {
   font-size: 0.9rem;
   text-transform: uppercase;
   font-weight: bold;
 }
+
+.logo-wrapper {
+  flex: 2;
+}
+
 
 @media (min-width: 786px) {
   .menu {
