Atualização de links no Header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,10 @@
   <!--Ajuste Gustavo - Adicionado class: itens-menu e criado css-->
   <nav class="itens-menu">
     <ul class="itens">
-      <li><a href="Inicio.html">Inicio</a></li>
-      <li><a href="Sobre.html">Sobre</a></li>
-      <li><a href="MundoPet.html">Mundo Pet</a></li>
-      <li class="botao"><a href="Login.html">Login</a></li>
+      <li><a href="/">Inicio</a></li>
+      <li><a href="/sobre">Sobre</a></li>
+      <li><a href="/mundoPet">Mundo Pet</a></li>
+      <li class="botao"><a href="/login">Login</a></li>
     </ul>
   </nav>
 
