--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,7 +12,7 @@
     <nav>
         <ul class="footer-contact">
             <li><a href="trabalheConosco.html">Trabalhe Conosco</a></li><br>
-            <li><a href="contato.html">Contato</a></li><br>
+            <li><a href="/contato">Contato</a></li><br>
             <li><a href="termosdeuso.html">Termos de uso</a></li>
         </ul>
         <ul class="midias">
