--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -16,11 +16,7 @@
  
 
   
-  body {
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    min-height: 100vw;
-    min-width: 100vw;
+  body {   
     background-color: rgba(86, 177, 189, 0.45) ;
     text-align: center;
   }
@@ -102,15 +98,20 @@
   }
   .anuncio{
     background-color: white;
-    display: 100%;
-   
-    
+    display: flex;
+    flex-direction: column;
+       
+     
 }
 
 .botoes2{
-  display: block;
+  
   margin: 0 auto;
-  align-items: flex-end;
+  display: flex;
+  list-style: none;
+  gap: 18px;
+
+  
   
 }
 .experimente{
