--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PetHelp</title>
-  <link rel="stylesheet" href="../public/stylesheets/contato.css">
-</head>
+  <%-include('./partials/head.ejs') %>
 <body>
-    <header>
+    
       <%-include('./partials/header.ejs') %>
-      </header>
+      
 
   <section> 
   <h3 class="contato"> CONTATO </h3>
@@ -53,9 +47,9 @@
        </section>
 
 
-   <footer>
+   
     <%- include('./partials/footer.ejs') %>
-  </footer>
+  
 </body>
 <%- include('./partials/js.ejs') %>
 </html>
