--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,6 +9,8 @@
     <link href="/stylesheets/stylegustavo.css" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/header.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
+    <link rel="stylesheet" href="/stylesheets/cadastro.css">
+    <link rel="stylesheet" href="/stylesheets/contato.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <title>PetHelp</title>
 </head>
