--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -83,6 +83,22 @@ body {
   height: auto;
 }
 
+.imagem-margem-3 {
+  margin: 15px 60px 15px 10px;
+  max-width:400px;
+  max-height:290px;
+  width: auto;
+  height: auto;
+}
+
+.imagem-margem-4 {
+  margin: 15px 10px 15px 60px;
+  max-width:400px;
+  max-height:290px;
+  width: auto;
+  height: auto;
+}
+
 .centralizar-texto {
   text-align: center;
   font-size: xx-large;
@@ -176,16 +192,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.inner-wrapper button {
-  cursor: pointer;
-  border: 0;
-  background-color: var(--background-color);
-  font-size: 2.5rem;
-  width: 433px;
-  height: 83px;
-  color: white;
 }
 
 .inner-wrapper h3 {
