--- a/views/cadVet.ejs
+++ b/views/cadVet.ejs
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
-  <%- include('./partials/head.ejs') %>
+  <%-include('./partials/head.ejs') %>
 
-<body>
-  <%-include('./partials/header.ejs') %>
+<body class="cadastroBody">
+  
+    <%-include('./partials/header.ejs') %>
+
   <section>
-    <h3 class="cadVet">Cadastro de Veterinário</h3>
-    <div class="align-row" >
-      <form method="POST" >
-        <label form="name" class="nome">Nome:</label>
+    <h3 class="cadastro">Cadastro de Veterinário</h3>
+    <div class="align-row">
+      <form method="POST">
+        <label for="name" class="nome">Nome Completo:</label>
         <br>
-        <input type="text" id="name" name="name" required class="form">
-        <br>
-
-        <label form="endereco">Endereço:</label>
-        <br>
-        <input type="text" id="endereco" name="endereco" required class="form">
+        <input type="text" id="name" name="name" placeholder="Digite seu nome completo" required class="formulario">
         <br>
 
-        <label form="number">Telefone/Whatsapp:</label>
+        <label for="name" class="nome">CRMV:</label>
         <br>
-        <input type="number" id="number" name="number" required class="form">
+        <input type="text" id="crmv" name="crmv" placeholder="Digite seu CRMV"  required class="formulario">
         <br>
 
-        <label form="email">E-mail:</label>
+        <label for="endereco">Endereço:</label>
         <br>
-        <input type="email" id="email" name="email" required class="form">
+        <input type="text" id="endereco" name="endereco" placeholder="Digite seu endereço completo"  required class="formulario">
+        <br>
+
+        <label for="number">Telefone/Whatsapp:</label>
+        <br>
+        <input type="text" name="telefone" id="telefone" placeholder="Digite um número de telefone" required class="formulario" maxlength="15" />
+        <br>
+
+        <label for="email">E-mail:</label>
+        <br>
+        <input type="email" id="email" name="email" placeholder="Digite um e-mail válido" required class="formulario">
         <br>
 
         <label>Sexo:</label>
         <br>
-        <select name="Genero" class="form">
+        <select name="Genero" class="formulario">
+          <option value="0">Selecione seu gênero
+          </option>
           <option value="1">Masculino
           </option>
           <option value="2">Feminino
@@ -42,32 +51,14 @@
         <br>
         <label>Data de nascimento:</label>
         <br>
-        <input type="date" id="date" name="date" class="form">
+        <input type="date" id="date" name="date" class="formulario">
         <br>
         <label>CPF:</label>
         <br>
 
-        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="form">
-        <br>
-
-        <label>PET:</label>
-        <br>
-        <select name="tipo" class="form">
-          <option value="1">Cachorro
-          </option>
-          <option value="2">Gato
-        </select>
-        <br>
-        <label form="name">Nome do pet:</label>
-        <br>
-        <input type="text" id="namePet" name="name" required class="form">
-        <br>
-        <label form="idadePet">Idade do pet:</label>
-        <br>
-        <input type="text" id="idadePet" name="Idade" required class="form">
+        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formulario">
         <br>
         <br>
-
         <div class="botoes">
           <button type="button" class="cadastrar">Cadastrar</button>
           <button type="button" class="Limpar">Limpar</button>
@@ -78,9 +69,11 @@
     <br>
     </form>
 
+      <%- include('./partials/footer.ejs') %>
+    
 </body>
 
-<%- include('./partials/footer.ejs') %>
+<%- include('./partials/telefone.ejs') %>
 
 <%- include('./partials/js.ejs') %>
 
