--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -11,7 +11,7 @@
     </div>
     <nav>
         <ul class="footer-contact">
-            <li><a href="trabalheConosco.html">Trabalhe Conosco</a></li><br>
+            <li><a href="/cadVet">Trabalhe Conosco</a></li><br>
             <li><a href="/contato">Contato</a></li><br>
             <li><a href="termosdeuso.html">Termos de uso</a></li>
         </ul>
