Links SOBRE e MUNDO PET do header

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
       <div class="centralizar-texto">
       <p>
         <h3>Todo cuidado de seu pet a um clique</h3>
+        <a href="#minhaTag">Palavra de link para o texto</a>
       </p>
     </div>
       <div id="slider">
@@ -22,7 +23,7 @@
     </div>
   </section>
 
-  <section class="secao-impar">
+  <section id="mundoPet" class="secao-impar">
     <h1>Mundo Pet</h1>
     <div class="outer-wrapper">
       <nav>
@@ -50,7 +51,7 @@
     </div>
   </section>
 
-  <section class="secao-par">
+  <section id="sobre" class="secao-par">
     <div class="outer-wrapper">
       <nav>
         <ul>
@@ -113,7 +114,6 @@
     </div>
     </div>
   </section>
-
   <section class="secao-impar">
     <div class="area-reservada">
       <p>ÁREA RESERVADA PARA PRIMEIRA CONSULTA GRÁTIS</p>
