--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
   <nav class="itens-menu">
     <ul class="itens">
       <li><a href="/">Inicio</a></li>
-      <li><a href="/sobre">Sobre</a></li>
-      <li><a href="/mundoPet">Mundo Pet</a></li>
+      <li><a href="#sobre">Sobre</a></li>
+      <li><a href="#mundoPet">Mundo Pet</a></li>
       <li class="botao"><a href="/login">Login</a></li>
     </ul>
   </nav>
