--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   
 <body>
   <%- include('./partials/header.ejs') %>
-  <section class="secao-par">
+  <section>
     <div>
       <div class="centralizar-texto">
       <p>
@@ -50,7 +50,7 @@
     </div>
   </section>
 
-  <section id="sobre" class="secao-par">
+  <section id="sobre">
     <div class="outer-wrapper">
       <nav>
         <ul>
