--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -92,4 +92,6 @@
     
 </body>
 <%- include('./partials/js.ejs') %>
+<%- include('./partials/email.ejs') %>
+<%- include('./partials/Telefone.ejs') %>
 </html>
