--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/stylesheets/footer.css">
     <link rel="stylesheet" href="/stylesheets/cadastro.css">
     <link rel="stylesheet" href="/stylesheets/contato.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <title>PetHelp</title>
 </head>
