--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
   </section>
   <section class="secao-impar">
     <div class="area-reservada">
-      <p>ÁREA RESERVADA PARA PRIMEIRA CONSULTA GRÁTIS</p>
+      <%- include('./partials/promo.ejs') %>
     </div>
   </section>
 
