--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
         <br>
 
         <br>
-        <div class="botoes">
+        <div class="botoes-sigIn">
           <button type="button" class="entrar">Entrar</button>
           <button type="button" class="limpar">Limpar</button>
         </div>
@@ -41,20 +41,8 @@
     <br>
     </div>
        </section>
-       <section class="anuncio">
-        <div class="box">
-             <p class="experimente">Experimente agora mesmo!</p>
-             <br>
-           <p class="primeira">Primeira consulta grátis!</p>
-         </div>
-
-           <div class="botoes2">
-             <button type="button" class="fazerCadastro">Fazer cadastro</button>
-             <button type="button" class="contatoPromocao">Contato</button>
-           </div>
-           <br>
-      </section>
-
+       
+       <%- include('./partials/promo.ejs') %>
 
    
     <%- include('./partials/footer.ejs') %>
