--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -17,7 +17,11 @@
 
   
   body {   
-    background-color: rgba(86, 177, 189, 0.45) ;
+    font-family: "Open Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
+    min-height: 100vw;
+    min-width: 100vw;
+    background-color: rgba(86, 177, 189, 0.45);
     text-align: center;
   }
   .align-row{ 
@@ -67,13 +71,7 @@
 
   }
  
-  .contatoPromocao{
-    background-color: white;
-    text-decoration-color: black;
-    width: 198px;
-    height: 42px;
-
-  }
+ 
   .enviar{
     background-color: black;
     color: white;
@@ -89,43 +87,9 @@
     height: 48px;
 
   }
-  .anuncio{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-       
-     
-}
-
-.fazerCadastro{
-  background-color: black;
-  color: white;
-  width: 198px;
-  height: 42px;
   
 
-}
-.botoes2{
-  
-  margin: 0 auto;
-  display: flex;
-  list-style: none;
-  gap: 18px;
 
-  
-  
-}
-.experimente{
-  color: black;
-  font-weight: bold;
-    font-size: 32px;
-    
-}
-.primeira{
-    color: red;
-    font-weight: bold;
-    font-size: 40px;
-}
   
   
   @media (max-width: 1535px){
