--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -16,11 +16,11 @@
   }
   .cadastroLogin{
     border: none;
-    background-color: rgba(86, 177, 189, 0.45) ;
-    color: black;
-    width: 160px;
-    height: 36px;
-    font-size: 24px;
+  background-color: rgba(86, 177, 189, 0.45);
+  color: black;
+  width: 160px;
+  height: 36px;
+  font-size: 24px;
   }
   .login{
     border: none;
@@ -40,19 +40,26 @@
     margin: 10px 0px 10px 0px;
   }
   .botoes{
-    display: block;
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    margin: 25px auto;
     text-align: center;
-    
-
   }
   .entrar{
     background-color: black;
     color: white;
     width: 198px;
     height: 42px;
-    
-
+  }
+  .botoes-sigIn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    margin: 25px auto;
+    text-align: center;
   }
 
   .limpar{
@@ -65,39 +72,10 @@
   button:hover{
     background-color: hsl(137, 100%, 81%);
   }
-  .fazerCadastro{
-    background-color: black;
-    color: white;
-    width: 198px;
-    height: 42px;
-    
+  
+  
 
-  }
-  .contatoPromocao{
-    background-color: white;
-    text-decoration-color: black;
-    width: 198px;
-    height: 42px;
 
-  }
-  .anuncio{
-    display: flex;
-    background-color: white;
-    display: flex;
-    
-}
-
-.experimente{
-  color: black;
-  font-weight: bold;
-    font-size: 32px;
-    
-}
-.primeira{
-    color: red;
-    font-weight: bold;
-    font-size: 40px;
-}
 
  
 
