--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <%-include('./partials/head.ejs') %>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link rel="stylesheet" href="/stylesheets/header.css">
+    <link rel="stylesheet" href="/stylesheets/footer.css">    
+    <link rel="stylesheet" href="/stylesheets/contato.css"> 
+    <link rel="stylesheet" href="/stylesheets/promo.css">    
+    <title>PetHelp</title>
+  </head>
 <body>
     
       <%-include('./partials/header.ejs') %>
