--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,3 @@
-
 <header>
   <div class="header-icon">
     <img src="/images/petlogo.png" width="50px;" alt="Logo da petvet" /><i
@@ -8,22 +7,19 @@
 
   <!--Ajuste Gustavo - Adicionado class: itens-menu e criado css-->
   <nav class="itens-menu">
-    <ul class="itens">
-      <li><a href="/">Inicio</a></li>
-      <li><a href="#sobre">Sobre</a></li>
-      <li><a href="#mundoPet">Mundo Pet</a></li>
-      <li class="botao"><a href="/login">Login</a></li>
-    </ul>
+    <a href="/">Inicio</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#mundoPet">Mundo Pet</a>
+    <a class="botao" href="/login">Login</a>
   </nav>
 
   <!--Ajuste Gustavo - Adicionado trecho abaixo-->
-      
-    <span class="btn-menu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </span>
-  
+
+  <span class="btn-menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </span>
 
   <!--Ajuste Gustavo - FIM-->
 </header>
