--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -13,27 +13,24 @@ header {
   font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
-  /*Ajuste Gustavo
-    de: 
-    height: 75px;
 
-    para:
-    height: 50px;
-  */
   height: 50px;
   justify-content: space-between;
-  /*Ajuste Gustavo
-    de: 
-    padding: 10px;
 
-    para:
-    padding: 0px;
-  */
   padding: 0px;
 }
 a {
   text-decoration: none;
   color: black;
+}
+
+nav > a {
+  font-family: "Arial";
+  font-size: 18px;
+  transition: all 0.5s;
+}
+a:hover {
+  background-color: hsla(137, 59%, 65%, 0.829);
 }
 
 .itens {
@@ -48,9 +45,6 @@ a {
 .itens li {
   margin: 50px;
 }
-
-
-/*Ajuste Gustavo - Adicionado trecho abaixo*/
 
 @media (max-width: 786px) {
   .itens-menu {
