--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,8 @@
 <footer class="footer">
-  <div class="footer-text">
-    <div class="footer-icon">
-      <img src="/images/petlogo.png " width="164px;" alt="Logo da petvet" /><i
-        class="logopet"
-      ></i>
-    </div>
+  <div class="footertext">
+    <!-- <div class="footer-icon"> -->
+    <img src="/images/petlogo.png " width="164px;" alt="Logo da petvet" />
+ 
     <p>
       "Este serviço não se trata de uma <br />consulta e, por isso, não
       substitui <br />
@@ -14,29 +12,30 @@
       fornecer orientações a seus usuários."
     </p>
   </div>
-  <nav>
-    <ul class="footer-contact">
-      <li><a href="/cadVet">Trabalhe Conosco</a></li>
-      <br />
-      <li><a href="/contato">Contato</a></li>
-      <br />
-      <li><a href="termosdeuso.html">Termos de uso</a></li>
-    </ul>
-    <ul class="midias">
+  <div class="footerlinks">
+    <a href="/cadVet">Trabalhe Conosco</a>
+    <br />
+    <a href="/contato">Contato</a>
+    <br />
+    <a href="termosdeuso.html">Termos de uso</a>
+  </div>
+
+  <div>
+    <ul class="footermidias">
       <li href="#">
         <img src="/images/facelogo.png" width="42px;" />
-        <i class="facelogo"></i>
       </li>
       <li href="#">
-        <img src="/images/TTlogo.png" width="42px;" /> <i class="TTlogo"></i>
+        <img src="/images/TTlogo.png" width="42px;" />
       </li>
       <li href="#">
-        <img src="/images/youlogo.png" width="45px;" /> <i class="youlogo"></i>
+        <img src="/images/youlogo.png" width="45px;" />
       </li>
       <li href="#">
         <img src="/images/Instalogo.png" width="42px;" />
-        <i class="instalogo"></i>
+        
       </li>
     </ul>
-  </nav>
+  </div>
+  </div>
 </footer>
