--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -2,93 +2,45 @@
   margin: 0;
 }
 
-/*Ajuste Gustavo
-
-Excluir: 
-
-body {
-  font-family: "Open Sans", sans-serif;
-  font-family: "Roboto", sans-serif;
-  min-height: 100vw;
-  min-width: 100vw;
-}
-
-*/
-
 footer {
   background-color: hsl(137, 100%, 81%);
   color: black;
-  /*height: auto;
-  width: 100vw;*/
+
   font-family: "Open Sans", sans-serif;
   font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
-  max-width: 100vw;
-  /*height: 140px;*/
+
   justify-content: space-between;
   border-radius: 6px;
 }
 
-.footer-icon {
-  max-width: 100%;
-  max-width: 880px;
-  margin: 0 auto;
-}
-.footer-text {
+.footertext {
+  align-items: center;
   display: flex;
 }
-.footer-text p {
-  font-size: 12px;
-  max-width: 100%;
-  margin-top: 30px;
-}
-.footer-contact {
+
+.footerlinks {
   display: flex;
-  list-style: none;
-  text-decoration: none;
-  max-width: 100%;
-  height: 115px;
-  margin: 0 0 0 450px;
-  font-weight: bold;
+
+  align-items: center;
+  font-size: 18px;
   flex-direction: column;
 }
 
-a {
-  text-decoration: none;
-  color: black;
-  max-width: 100%;
-  text-align: center;
+.footerfrase {
+  text-align: left;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  max-width: 100%;
-  width: 80%;
-}
-
-.midias {
-  display: flex;
+.footermidias {
   list-style: none;
-  max-width: 100%;
+  display: flex;
   gap: 18px;
-  width: 100%;
+
   justify-content: end;
 }
 
-.midias > li:hover {
-  background-color: hsla(137, 59%, 65%, 0.829);
-  transition: all 0.5s;
-}
-
-/*Ajuste Gustavo
-de: 
-@media (max-width: 1535px)
-para:
-@media (max-width: 786px) 
-*/
+/* comentario */
 @media (max-width: 786px) {
   .footer-contact {
     margin: 0 50px 0 50px;
@@ -98,11 +50,9 @@ para:
   .footer-icon {
     width: 100%;
   }
-  .midias {
-    width: 100%;
-  }
-  .footer-text p {
-    width: 100%;
-    height: 100%;
+  .footermidias {
+    padding-right: 20px;
+    display: flex;
+    flex-direction: column;
   }
 }
