Ajustando para footer ficar no fim da página de cadastro

--- a/public/stylesheets/stylegustavo.css
+++ b/public/stylesheets/stylegustavo.css
@@ -4,6 +4,11 @@ h1 {
   padding: 50px;
 }
 
+h2{
+  text-align: center;
+  padding: 40px 40px;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: #fafafa;
@@ -13,6 +18,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: content-box;
 }
 
 .card {
@@ -84,12 +90,20 @@ table .button {
   font-size: 16px;
   border-radius: 12px;
 }
+.general-container {
+  min-height: 95vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-container {
+  flex: 1;
+}
+
+
 
 @media (max-width: 786px) {
-  * {
-    margin: 0 auto;
-  }
-
+ 
   .row {
     justify-content: center;
     align-items: center;
