--- a/views/partials/header_cliente.ejs
+++ b/views/partials/header_cliente.ejs
@@ -9,14 +9,14 @@
   <nav class="itens-menu">
     <ul class="itens">
       <li><a href="/clientes">Home</a></li>
-      <li><a href="Sobre.html">Consultas</a></li>
-      <li><a href="MundoPet.html">Cadastro Pet</a></li> 
+      <li><a href="/clientes/clientes_consultas">Consultas</a></li>
+      <li><a href="/clientes/cadastropets">Cadastro Pet</a></li> 
       <li><a href="/clientes/cadastrocliente">Alterar Dados</a></li> 
 
     </ul>   
   </nav>
   <div>
-    <a href="Login.html">Gustavo Cortes</a>
+    <a href="#">Gustavo Cortes</a>
   </div>
 
   <!--Ajuste Gustavo - Adicionado trecho abaixo-->
