--- a/views/clientes_inicial.ejs
+++ b/views/clientes_inicial.ejs
@@ -2,7 +2,8 @@
 
     <body>
         <%- include('./partials/header_cliente.ejs') %>
-            <!--Card pets -->
+        <div>
+             <!--Card pets -->
             <div class="lista-pets">
                 <h1>Pets Cadastrados</h1>
                 <div class="row">
@@ -59,6 +60,9 @@
             </div>
             <!--FIM - Lista de Consultas-->
 
+
+        </div>
+           
 
             <%- include('./partials/footer.ejs') %>
     </body>
