--- a/views/partials/head_clientes.ejs
+++ b/views/partials/head_clientes.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/header.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">    
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link href="/stylesheets/stylegustavo.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/stylegustavo.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <title>PetHelp</title>
 </head>
