--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,14 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap");
+
 *{
     margin: 0;
+    font-family: 'Roboto', sans-serif;
   }
-  
+  /*Criado para as configurações gerais (Matheus)*/
  
  
   
 
   body {
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
     min-height: 100vw;
     min-width: 100vw;
     background-color: rgba(86, 177, 189, 0.45) ;
