--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -19,20 +19,19 @@ header {
 
   padding: 0px;
 }
+.header-icon {
+  flex: 0.3;
+}
+
 a {
   text-decoration: none;
   color: black;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  max-width: 100%;
-  width: 80%;
-}
-
 nav > a {
+  border-radius: 10px;
+  padding: 6px;
+  margin: 0 40px;
   font-family: "Arial";
   font-size: 18px;
   transition: all 0.5s;
@@ -52,6 +51,13 @@ a:hover {
 
 .itens li {
   margin: 50px;
+}
+
+.botao {
+  border-radius: 10px;
+  padding: 6px;
+  font-size: 18px;
+  transition: all 0.5s;
 }
 
 @media (max-width: 786px) {
@@ -83,5 +89,8 @@ a:hover {
     display: block;
     margin-bottom: 5px;
     background-color: rgb(0, 0, 0);
+  }
+  .botao {
+    display: none;
   }
 }
