--- a/views/partials/promo.ejs
+++ b/views/partials/promo.ejs
@@ -5,9 +5,13 @@
        <p class="primeira">Primeira consulta grátis!</p>
      </div>
 
+       <!-- <div class="botoes2">
+         <button type="button" class="fazerCadastro" ><a href="/cadastro">Fazer cadastro</a></button>
+         <button type="button" class="contatoPromocao"><a href="/contato">Contato</a></button>
+       </div> -->
        <div class="botoes2">
-         <button type="button" class="fazerCadastro">Fazer cadastro</button>
-         <button type="button" class="contatoPromocao">Contato</button>
+         <button type="button" class="fazerCadastro" ><a href="/cadastro">Fazer cadastro</a></button>
+         <button type="button" class="contatoPromocao"><a href="/contato">Contato</a></button>
        </div>
        <br>
   </section>
