--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    text-decoration: none black;
   }
   
  
@@ -41,7 +42,8 @@
   }
   .formulario{
     border: none;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     height: 50px;
     border-radius: 38px;
     font-size: 18px;
@@ -50,7 +52,8 @@
   }
   .mensagem{
     border: none;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     height: 202px;
     border-radius: 38px;
     font-size: 18px;
@@ -75,7 +78,8 @@
   .enviar{
     background-color: black;
     color: white;
-    width: 198px;
+    max-width: 198px;
+    width: 100%;
     height: 48px;
     
 
@@ -83,7 +87,8 @@
   .limpar{
     background-color: white;
     text-decoration-color: black;
-    width: 198px;
+    max-width: 198px;
+    width: 100%;
     height: 48px;
 
   }
