--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,13 @@
 <footer class="footer">
   <div class="footertext">
     <!-- <div class="footer-icon"> -->
+
     <img
       src="/images/petlogo.png "
       width="164px;"
       id="petvet"
       alt="Logo da petvet"
+      class="petvet"
     />
 
     <p>
