--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include('./partials/head.ejs') %>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/promo.css" />
+    <link rel="stylesheet" href="/stylesheets/header.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css" />
+
+
+    <link rel="stylesheet" href="/stylesheets/login.css" />
+
+
+    <title>PetHelp</title>
+  </head>
 <body>
     
       <%-include('./partials/header.ejs') %>
