--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -9,8 +9,8 @@
  
 
   <section>
-    <h3 class="cadastro" > Cadastro de usuario </h3>
-    <div class="align-row" >
+    <h3 class="user-cad" > Cadastro de usuario </h3>
+    <div class="align-row-userCad" >
       <form method="POST" >
         
 
@@ -76,9 +76,9 @@
 
 
         <br>
-        <div class="botoes">
-          <button type="button" class="cadastrar">Cadastrar</button>
-          <button type="button" class="Limpar">Limpar</button>
+        <div class="btn-userCad">
+          <button type="button" class="btn-userCad-cad">Cadastrar</button>
+          <button type="button" class="btn-userCad-limpar">Limpar</button>
         </div>
         <br>
 
