--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -16,12 +16,12 @@
       
 
   <section> 
-  <h3 class="contato"> CONTATO </h3>
+  <h3 class="pg-contato"> CONTATO </h3>
   <div class="align-row">
     <form method="get" class="form">
         <label for="name">Nome:</label>
         <br>
-        <input type="text" id="name" name="name" required class="formulario">
+        <input type="text" id="name" name="name" required class="contato-formulario">
         <br>
         <label for="email">E-mail:</label>
         <br>
@@ -33,11 +33,11 @@
         <br>
         <label for="Mensagem">Mensagem:</label>
         <br>
-        <input type="text" id= "mensagem" name="Mensagem" size="300" class="mensagem"/>
+        <input type="text" id= "mensagem" name="Mensagem" size="300" class="contato-mensagem"/>
         <br>
-        <div class="botoes">
-          <button type="button" class="enviar">Enviar</button>
-          <button type="button" class="limpar">Limpar</button>
+        <div class="btn-form">
+          <button type="button" class="contato-enviar">Enviar</button>
+          <button type="button" class="contato-limpar">Limpar</button>
         </div>
         <br>
        </section>
