--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/header.css">
-    <link rel="stylesheet" href="/stylesheets/footer.css">
-    <link rel="stylesheet" href="/stylesheets/login.css">
-    <link rel="stylesheet" href="/stylesheets/promo.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/promo.css" />
+    <link rel="stylesheet" href="/stylesheets/header.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css" />
+
+
+    <link rel="stylesheet" href="/stylesheets/login.css" />
+
+
     <title>PetHelp</title>
   </head>
 <body>
@@ -17,12 +21,12 @@
 
   <section> 
   
-  <div class="align-row" >
+  <div class="" >
     <form method="get" class="form">
 
       <br>
-      <div class="botoes">
-        <button type="button" class="login">Login</button>
+      <div class="btn-login">
+        <button type="button" class="user-login">Login</button>
         <button type="button" class="cadastroLogin">Cadastro</button>
       </div>
       <br>
@@ -40,9 +44,9 @@
         <br>
 
         <br>
-        <div class="botoes-sigIn">
+        <div class="btn-sigIn">
           <button type="button" class="entrar">Entrar</button>
-          <button type="button" class="limpar">Limpar</button>
+          <button type="button" class="btn-limpar">Limpar</button>
         </div>
         <br>
 
