--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,15 @@
-<footer class="footer">
+ <footer class="footer">
   <div class="footertext">
     <!-- <div class="footer-icon"> -->
-    <img src="/images/petlogo.png " width="164px;" alt="Logo da petvet" />
- 
+
+    <img
+      src="/images/petlogo.png "
+      width="164px;"
+      id="petvet"
+      alt="Logo da petvet"
+      class="petvet"
+    />
+
     <p>
       "Este serviço não se trata de uma <br />consulta e, por isso, não
       substitui <br />
@@ -33,9 +40,7 @@
       </li>
       <li href="#">
         <img src="/images/Instalogo.png" width="42px;" />
-        
       </li>
     </ul>
-  </div>
   </div>
 </footer>
