--- a/public/stylesheets/cadVet.css
+++ b/public/stylesheets/cadVet.css
@@ -1,23 +1,23 @@
-*{
+* {
     margin: 0;
 }
-     
-.interactions{
+
+.interactions {
     color: black;
     list-style: none;
     display: flex;
     font-size: 18px;
     gap: 50px;
-    text-decoration: none; 
-}
- 
-.cadVet{
-    margin:0 auto;
-    font-size:  24px;
-    padding: 50px ;
+    text-decoration: none;
 }
 
-.form{
+.cadVet {
+    margin: 0 auto;
+    font-size: 24px;
+    padding: 50px;
+}
+
+.form {
     border: none;
     width: 500px;
     height: 50px;
@@ -27,66 +27,62 @@
     margin: 10px 0px 10px 0px;
 }
 
-.botoes{
+.btn-cadVet {
     display: block;
     margin: 0 auto;
     text-align: center;
 }
-  
-.align-row{ 
-    margin:0px auto;
+
+.align-rowCad {
+    margin: 0px auto;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-start;
     text-align: start;
-    font-size:  24px;
+    font-size: 24px;
     align-items: center;
 }
 
-body {
+.cadastroBody {
     font-family: 'Open Sans', sans-serif;
     font-style: bold;
     min-height: 100vw;
     min-width: 100vw;
-    background-color: rgba(86, 177, 189, 0.45) ;
+    background-color: rgba(86, 177, 189, 0.45);
     text-align: center;
 }
-  
-button:hover{
+
+button:hover {
     background-color: hsl(137, 100%, 81%);
 }
 
-.cadastrar {
+.btn-cadVet-cadastrar {
     background-color: black;
     text-decoration-color: white;
     width: 198px;
     height: 82px;
 }
 
-.Limpar{
-    background-color: white;
-    text-decoration-color: black;
-    width: 198px;
-    height: 82px; 
-}
 
-.cadastrar{
-    background-color:black ;
+.btn-cadVet-cadastrar {
+    background-color: black;
     color: white;
 }
 
-.limpar{
-    background-color:white ;
+.btn-cadVet-limpar {
+    background-color: white;
     color: black;
+    width: 198px;
+    height: 82px;
 }
 
 @media (min-width: 786px) {
     .menu {
-      display: flex;
+        display: flex;
     }
-  
+
     .menu-mobile {
-      display: none;
+        display: none;
     }
 }
