--- a/public/stylesheets/contato.css
+++ b/public/stylesheets/contato.css
@@ -1,101 +1,83 @@
-*{
-    margin: 0;
-    text-decoration: none black;
-  }
-  
- 
-   
-  .interactions{
-    color: black;
-    list-style: none;
-    display: flex;
-    font-size: 18px;
-    gap: 50px;
-    text-decoration: none; 
-    
-  }
- 
+* {
+  margin: 0;
+}
 
-  
-  body {   
-    font-family: "Open Sans", sans-serif;
-    font-family: "Roboto", sans-serif;
-    min-height: 100vw;
-    min-width: 100vw;
-    background-color: rgba(86, 177, 189, 0.45);
-    text-align: center;
-  }
-  .align-row{ 
-    margin:0px auto;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    text-align: start;
-    font-size:  24px;
-    align-items: center;
-  }
-  .contato{
-    margin:0 auto;
-    font-size:  24px;
-    padding: 50px ;
-  }
-  .formulario{
-    border: none;
-    max-width: 500px;
-    width: 100%;
-    height: 50px;
-    border-radius: 38px;
-    font-size: 18px;
-    text-align: center;
-    margin: 10px 0px 10px 0px;
-  }
-  .mensagem{
-    border: none;
-    width: 100%;
-    max-width: 500px;
-    height: 202px;
-    border-radius: 38px;
-    font-size: 18px;
-    text-align: start;
-    margin: 10px 0px 10px 0px;
-    /* Como fazer o texto preencher toda a caixa da mensagem ? */
-  }
-  .botoes{
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    
+.interactions {
+  color: black;
+  list-style: none;
+  display: flex;
+  font-size: 18px;
+  gap: 50px;
+  text-decoration: none;
+}
 
-  }
+body {
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 
-  button:hover{
-    background-color: hsl(137, 100%, 81%);
+  min-width: 100vw;
+  background-color: rgba(86, 177, 189, 0.45);
+  text-align: center;
+}
+.align-row {
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  text-align: start;
+  font-size: 24px;
+  align-items: center;
+}
+.pg-contato {
+  margin: 0 auto;
+  font-size: 24px;
+  padding: 50px;
+}
+.contato-formulario {
+  max-width: 100%;
+  border: none;
+  width: 450px;
+  height: 50px;
+  border-radius: 38px;
+  font-size: 18px;
+  text-align: center;
+  margin: 10px 0px 10px 0px;
+}
+.contato-mensagem {
+  border: none;
+  width: 100%;
+  height: 202px;
+  border-radius: 38px;
+  font-size: 18px;
+  text-align: start;
+  margin: 10px 0px 10px 0px;
+  max-width: 500px;
+}
+/* Como fazer o texto preencher toda a caixa da mensagem ? */
 
-  }
- 
- 
-  .enviar{
-    background-color: black;
-    color: white;
-    max-width: 198px;
-    width: 100%;
-    height: 48px;
-    
+.btn-form {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
 
-  }
-  .limpar{
-    background-color: white;
-    text-decoration-color: black;
-    max-width: 198px;
-    width: 100%;
-    height: 48px;
+button:hover {
+  background-color: hsl(137, 100%, 81%);
+}
 
-  }
-  
+.contato-enviar {
+  background-color: black;
+  color: white;
+  width: 198px;
+  height: 48px;
+}
+.contato-limpar {
+  background-color: white;
+  text-decoration-color: black;
+  width: 198px;
+  height: 48px;
+}
 
-
-  
-  
-  @media (max-width: 1535px){
-  }
+@media (max-width: 1535px) {
+}
