--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,7 +1,5 @@
 * {
   margin: 0;
-  text-decoration: none;
-
 }
 
 .menu-mobile {
@@ -22,20 +20,22 @@ header {
   padding: 0px;
 }
 
+.header-icon {
+  flex: 0.3;
+}
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  max-width: 100%;
-  width: 80%;
+a {
+  text-decoration: none;
+  color: black;
 }
 
 nav > a {
+  border-radius: 10px;
+  padding: 6px;
+  margin: 0 40px;
   font-family: "Arial";
   font-size: 18px;
   transition: all 0.5s;
-  color: black;
 }
 a:hover {
   background-color: hsla(137, 59%, 65%, 0.829);
@@ -46,12 +46,19 @@ a:hover {
   list-style: none;
   display: flex;
   font-size: 18px;
-  gap: 50px;
+  align-items: center;
   text-decoration: none;
 }
 
 .itens li {
   margin: 50px;
+}
+
+.btn-login {
+  border-radius: 10px;
+  padding: 6px;
+  font-size: 18px;
+  transition: all 0.5s;
 }
 
 @media (max-width: 786px) {
@@ -83,5 +90,8 @@ a:hover {
     display: block;
     margin-bottom: 5px;
     background-color: rgb(0, 0, 0);
+  }
+  .btn-login {
+    display: none;
   }
 }
