--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,86 +1,71 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap");
+* {
+  margin: 0;
+}
 
-*{
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-  }
-  /*Criado para as configurações gerais (Matheus)*/
- 
- 
-  
+body {
+  font-family: "Open Sans", sans-serif;
 
-  body {
-    min-height: 100vw;
-    min-width: 100vw;
-    background-color: rgba(86, 177, 189, 0.45) ;
-    text-align: center;
-  }
-  .cadastroLogin{
-    border: none;
+  min-width: 100vw;
+  background-color: rgba(86, 177, 189, 0.45);
+  text-align: center;
+}
+.cadastroLogin {
+  border: none;
   background-color: rgba(86, 177, 189, 0.45);
   color: black;
   width: 160px;
   height: 36px;
   font-size: 24px;
-  }
-  .login{
-    border: none;
-    background-color: rgba(86, 177, 189, 0.45) ;
-    color: black;
-    width: 160px;
-    height: 36px;
-    font-size: 24px;
-  }
-  .formulario{
-    border: none;
-    width: 500px;
-    height: 50px;
-    border-radius: 38px;
-    font-size: 18px;
-    text-align: center;
-    margin: 10px 0px 10px 0px;
-  }
-  .botoes{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 18px;
-    margin: 25px auto;
-    text-align: center;
-  }
-  .entrar{
-    background-color: black;
-    color: white;
-    width: 198px;
-    height: 42px;
-  }
-  .botoes-sigIn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 18px;
-    margin: 25px auto;
-    text-align: center;
-  }
+}
+.user-login {
+  border: none;
+  background-color: rgba(86, 177, 189, 0.45);
+  color: black;
+  width: 160px;
+  height: 36px;
+  font-size: 24px;
+}
+.formulario {
+  border: none;
+  width: 500px;
+  height: 50px;
+  border-radius: 38px;
+  font-size: 18px;
+  text-align: center;
+  margin: 10px 0px 10px 0px;
+}
+.btn-login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+  margin: 25px auto;
+  text-align: center;
+}
+.entrar {
+  background-color: black;
+  color: white;
+  width: 198px;
+  height: 42px;
+}
+.btn-sigIn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 18px;
+  margin: 25px auto;
+  text-align: center;
+}
 
-  .limpar{
-    background-color: white;
-    text-decoration-color: black;
-    width: 198px;
-    height: 42px;
+.btn-limpar {
+  background-color: white;
+  text-decoration-color: black;
+  width: 198px;
+  height: 42px;
+}
+button:hover {
+  background-color: hsl(137, 100%, 81%);
+}
 
-  }
-  button:hover{
-    background-color: hsl(137, 100%, 81%);
-  }
-  
-  
-
-
-
- 
-
- 
-  @media (max-width: 1535px){
-
-  }
+@media (max-width: 1535px) {
+}
