--- a/public/stylesheets/promo.css
+++ b/public/stylesheets/promo.css
@@ -1,33 +1,33 @@
+
 .anuncios{
-  display: flex;
-background-color: white;
-align-items: center;
-justify-content: center;
-gap: 25px;
-padding: 25px;
-}
-.experimente{
-  color: black;
-  font-weight: bold;
-    font-size: 32px;
-    
-}
-.primeira{
-    color: red;
-    font-weight: bold;
-    font-size: 40px;
-}
-.fazerCadastro{
-  background-color: black;
-  color: white;
-  max-width: 198px;
-  width: 100%;
-  height: 42px;
-}
-.contatoPromocao{
+    display: flex;
   background-color: white;
-  text-decoration-color: black;
-  max-width: 198px;
-  width: 100%;
-  height: 42px;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  padding: 25px;
 }
+.experimenteAgora{
+    color: black;
+    font-weight: bold;
+      font-size: 32px;
+      
+  }
+  .primeiraConsulta{
+      color: red;
+      font-weight: bold;
+      font-size: 40px;
+  }
+  .fazerCadastro{
+    background-color: black;
+    color: white;
+    width: 198px;
+    height: 42px;
+  }
+  .contatoPromocao{
+    background-color: white;
+    text-decoration-color: black;
+    width: 198px;
+    height: 42px;
+  }
+ 
