--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
     <a href="/">Inicio</a>
     <a href="#sobre">Sobre</a>
     <a href="#mundoPet">Mundo Pet</a>
-    <a class="botao" href="/login">Login</a>
   </nav>
+  <a class="btn-login" href="/login">Login</a>
 
   <!--Ajuste Gustavo - Adicionado trecho abaixo-->
 
