--- a/views/partials/promo.ejs
+++ b/views/partials/promo.ejs
@@ -1,17 +1,13 @@
 <section class="anuncios">
     <div class="box">
-         <p class="experimente">Experimente agora mesmo!</p>
+         <p class="experimenteAgora">Experimente agora mesmo!</p>
          <br>
-       <p class="primeira">Primeira consulta grátis!</p>
+       <p class="primeiraConsulta">Primeira consulta grátis!</p>
      </div>
 
-       <!-- <div class="botoes2">
-         <button type="button" class="fazerCadastro" ><a href="/cadastro">Fazer cadastro</a></button>
-         <button type="button" class="contatoPromocao"><a href="/contato">Contato</a></button>
-       </div> -->
-       <div class="botoes2">
-         <button type="button" class="fazerCadastro" ><a href="/cadastro">Fazer cadastro</a></button>
-         <button type="button" class="contatoPromocao"><a href="/contato">Contato</a></button>
+       <div class="btn-promo">
+         <button type="button" class="fazerCadastro">Fazer cadastro</button>
+         <button type="button" class="contatoPromocao">Contato</button>
        </div>
        <br>
   </section>
